[gd_scene load_steps=4 format=3 uid="uid://cy57smgop60b1"]

[ext_resource type="Script" path="res://base/guis/options_menu.gd" id="1_62msa"]
[ext_resource type="Script" path="res://base/guis/label_slider_line_edit.gd" id="2_0vn8r"]
[ext_resource type="Script" path="res://base/guis/resolution_button.gd" id="3_p8nc8"]

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_62msa")

[node name="Options" type="Button" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "Options"

[node name="BoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -340.0
offset_top = -260.0
offset_right = 300.0
offset_bottom = 220.0
grow_horizontal = 2
grow_vertical = 2

[node name="SFXVolumeSlider" type="HSlider" parent="BoxContainer"]
layout_mode = 2
tooltip_text = "Sound effects volume."
max_value = 1.0
step = 0.01
value = 0.26

[node name="Label" type="Label" parent="BoxContainer/SFXVolumeSlider"]
layout_mode = 0
offset_right = 59.0
offset_bottom = 23.0
text = "SFX"

[node name="MusicVolumeSlider" type="HSlider" parent="BoxContainer"]
layout_mode = 2
tooltip_text = "Music volume."

[node name="Label" type="Label" parent="BoxContainer/MusicVolumeSlider"]
layout_mode = 0
offset_right = 80.0
offset_bottom = 23.0
text = "Music"

[node name="FullscreenButton" type="OptionButton" parent="BoxContainer"]
layout_mode = 2
item_count = 5
selected = 0
popup/item_0/text = "Windowed"
popup/item_0/id = 0
popup/item_1/text = "Minimized"
popup/item_1/id = 1
popup/item_1/disabled = true
popup/item_2/text = "Maximized"
popup/item_2/id = 2
popup/item_3/text = "Fullscreen"
popup/item_3/id = 3
popup/item_4/text = "Exclusive Fullscreen"
popup/item_4/id = 4

[node name="VSyncButton" type="OptionButton" parent="BoxContainer"]
layout_mode = 2
item_count = 4
selected = 0
popup/item_0/text = "Disabled"
popup/item_0/id = 0
popup/item_1/text = "Enabled"
popup/item_1/id = 1
popup/item_1/disabled = true
popup/item_2/text = "Adaptive"
popup/item_2/id = 2
popup/item_3/text = "Mailbox"
popup/item_3/id = 3

[node name="Sensitivity" type="HBoxContainer" parent="BoxContainer"]
layout_mode = 2
script = ExtResource("2_0vn8r")

[node name="Label" type="Label" parent="BoxContainer/Sensitivity"]
layout_mode = 2
text = "Mouse Sensitivity"

[node name="Slider" type="HSlider" parent="BoxContainer/Sensitivity"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
tooltip_text = "Mouse sensitivity."
min_value = 1.0
max_value = 7.0
step = 0.01
value = 4.0

[node name="LineEdit" type="LineEdit" parent="BoxContainer/Sensitivity"]
layout_mode = 2
text = "1.0"

[node name="Resolution" type="HBoxContainer" parent="BoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="BoxContainer/Resolution"]
layout_mode = 2
text = "Resolution"

[node name="OptionButton" type="OptionButton" parent="BoxContainer/Resolution"]
layout_mode = 2
item_count = 1
selected = 0
popup/item_0/text = "1920 x 1080 @ 60Hz"
popup/item_0/id = 0
script = ExtResource("3_p8nc8")

[connection signal="value_changed" from="BoxContainer/SFXVolumeSlider" to="." method="_on_sfx_volume_slider_value_changed"]
[connection signal="value_changed" from="BoxContainer/MusicVolumeSlider" to="." method="_on_music_volume_slider_value_changed"]
[connection signal="item_selected" from="BoxContainer/FullscreenButton" to="." method="_on_fullscreen_button_item_selected"]
[connection signal="item_selected" from="BoxContainer/VSyncButton" to="." method="_on_vsync_button_item_selected"]
[connection signal="text_submitted" from="BoxContainer/Sensitivity/LineEdit" to="BoxContainer/Sensitivity" method="_on_line_edit_text_submitted"]
